# MLOps

./: .gitignore  README.md  requirements.txt
Fase1/: EDA.ipynb  Equipo34_Fase1-ale.ipynb  Equipo34_Fase1.ipynb  Equipo34_Final_Proyecto_ML_final_integrado.ipynb  Equipo34_Pipeline_Fase1.ipynb  Fase 1_Equipo34.ipynb  ML Canvas.docx
Fase1/data/: X_test.csv  X_train.csv  german_credit_cleaned_v1.csv  german_credit_processed_v2.csv  y_test.csv  y_train.csv
Fase1/models/: model_metadata.json
Fase1/reports/: feature_coefficients.csv  feature_importance.csv  model_comparison.csv
Fase2/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_pipeline.py
Fase2/docs/: ROLES.md
Fase2/docs/docs/: index.md
Fase2/fase2/: __init__.py  config.py  dataset.py  demo_pipeline.py  exceptions.py  features.py  pipeline.py  pipeline_builder.py  plots.py  transformers.py
Fase2/fase2/core/: data_processor.py  evaluator.py  feature_engineer.py  model_factory.py  trainer.py
Fase2/fase2/modeling/: predict.py  train.py
Fase2/fase2/utils/: validators.py
Fase2/models/: decision_tree_metadata.json  decision_tree_pipeline_metadata.json  logistic_regression_metadata.json  logistic_regression_pipeline_metadata.json  random_forest_metadata.json  random_forest_pipeline_metadata.json
Fase2/notebooks/: 1.0-t34-data-exploration.ipynb  1.0-t34-data-versioning.ipynb  2.0-t34-feature-engineering.ipynb  3.0-t34-model-training.ipynb  4.0-t34-sklearn-pipeline-best-practices.ipynb  5.0-t34-mlflow-tracking-demo.ipynb
