[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fase2"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Team 34" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.1"


[tool.ruff]
line-length = 99
src = ["fase2"]
include = ["pyproject.toml", "fase2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fase2"]
force-sort-within-sections = true

